# fast-rotation-fitting

./: .gitignore  CMakeLists.txt  README.md  benchmarking.cpp
cmake/: FindLIBIGL.cmake
src/: APD_Newton_AVX.h  AVX_math.h  FA3R.cpp  FA3R.h  MBCM.h  common.h  eigen_svd.cpp  eigen_svd.h  fit_rotation_avx.cpp  fit_rotation_avx.h  horneig.h  mcadams.h
src/Singular_Value_Decomposition/: Makefile  Singular_Value_Decomposition_Helper.cpp
src/igl/: readDMAT.cpp
